WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15659
InlineTextBox does not setStrokeStyle() as needed
https://bugs.webkit.org/show_bug.cgi?id=15659
Summary
InlineTextBox does not setStrokeStyle() as needed
Alp Toker
Reported
2007-10-24 04:05:06 PDT
InlineTextBox should setStrokeStyle(SolidStroke) where appropriate, otherwise the old StrokeStyle will be used when drawing underlines for text. Due to a bug in GraphicsContextCG (which fills rectangles to draw line strokes), this bug does not affect CG graphics, but does affect GraphicsContextCairo.
Attachments
Call context->setStrokeStyle(SolidStroke)
(1.20 KB, patch)
2007-10-24 04:07 PDT
,
Alp Toker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2007-10-24 04:07:11 PDT
Created
attachment 16834
[details]
Call context->setStrokeStyle(SolidStroke) I've just added context->setStrokeStyle(SolidStroke) in a few places as proof of concept. This may not cover all cases, and needs testing against the Mac port.
Adam Treat
Comment 2
2009-02-23 12:15:06 PST
This was fixed with
r41152
I believe although the workaround in GraphicsContextCairo should probably be removed.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug