2007-10-24  Alp Toker  <alp@atoker.com>

Reviewed by Mark Rowe.

        http://bugs.webkit.org/show_bug.cgi?id=15659
        InlineTextBox does not setStrokeStyle() as needed

        GraphicsContextCairo workaround to support a GraphicsContextCG quirk:

        Save and restore the StrokeStyle manually.

        * platform/graphics/cairo/GraphicsContextCairo.cpp:
        (WebCore::GraphicsContext::drawLineForText):



Canonical link: https://commits.webkit.org/20913@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26987 268f45cc-cd09-0410-ab3c-d52691b4dbfc